syntax = "proto2";

package spotify.player.proto;

option csharp_namespace = "Wavee.Protocol.Playback";
option optimize_for = CODE_SIZE;

message ContextPlayerOptions {
    optional bool shuffling_context = 1;
    optional bool repeating_context = 2;
    optional bool repeating_track = 3;
    optional float playback_speed = 4;
}

message ContextPlayerOptionOverrides {
    optional bool shuffling_context = 1;
    optional bool repeating_context = 2;
    optional bool repeating_track = 3;
    optional float playback_speed = 4;
}
