syntax = "proto2";

option csharp_namespace = "Wavee.Protocol.Playback";
package spotify.player.proto;

option optimize_for = CODE_SIZE;

message SkipToTrack {
    optional string page_url = 1;
    optional uint64 page_index = 2;
    optional string track_uid = 3;
    optional string track_uri = 4;
    optional uint64 track_index = 5;
}
